    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=19403).
  * Bail gracefully for corrupt JPEG images.
  * Bail gracefully for negative montage geometries (references
    https://bugzilla.redhat.com/show_bug.cgi?id=735599).
  * Account for DCm bits allocated 16 and significant bits 12 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19420).

2011-08-29  6.7.2-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-1.

2011-08-29  6.7.2-1 Cristy  <quetzlzacatenango@image...>
  * The AllChannels defined changed to 0x7ffffff to avoid integer overflow.

2011-08-26  6.7.2-0 Cristy  <quetzlzacatenango@image...>
  * HDR format 32-bit_rle_xyze implies the XYZ colorspace.

2011-08-22  6.7.1-10 Cristy  <quetzlzacatenango@image...>
  * Revert FormatImageAttributeList(), FormatImagePropertyList() (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19339).

2011-08-21  6.7.1-10 Glenn Randers-Pehrson <glennrp@image...>
  * Revised configure.ac (and configure) to look for -lpng15, -lpng14, -lpng12,
    and -lpng in that order instead of just -lpng.  This should help find
    a consistent library and headers when users upgrade their libpng delegate
    from one version to another, incompatible version.

2011-08-20  6.7.1-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.1-9.

2011-08-20  6.7.1-9 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in text annotation (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19331).

2011-08-18  6.7.1-9 Glenn Randers-Pehrson <glennrp@image...>
  * The "-strip" option was excluding the PNG tRNS chunk (see 6.6.6-7, below);
  revised the -strip option so it behaves as
  if "-define PNG:include-chunk=none,trns,gama" had appeared on the commandline.
  * When writing a PNG8 and more than one transparent color is present,
  merge them into the image->background_color (Reference